[package]
name = "radiance"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "radiance"

[dependencies]
hdk = { workspace = true }

serde = { workspace = true }

radiance_integrity = { workspace = true } 


[dev-dependencies]
fixt = "0.1.0"
futures = { version = "0.3.1", default-features = false }
hdk = { workspace = true, features = ["encoding", "test_utils"] }
holochain = { worskpace = true, default-features = false, features = [
  "test_utils",
] }
tokio = { version = "1.3", features = ["full"] }

